# ijcai25

./: README.md  pyproject.toml
data/: dataset.json  dataset_encodings.json
iaspllm/: main.py  utils.py
results/: llm_output.json  llm_output_stats.csv  results-70b-description-and-format.ods  results-70b-merged.ods  results-70b-no-description-with-asp.ods  results-70b-no-description.ods  results-70b-no-llmasp.ods  results-70b-with-asp.ods  results-8b-description-and-format.ods  results-8b-merged.ods  results-8b-no-description-with-asp.ods  results-8b-no-description.ods  results-8b-no-llmasp.ods  results-8b-with-asp.ods
specifications/applications/: ConnectedMaximum-densityStillLife.yml  CrossingMinimization.yml  GracefulGraphs.yml  GraphColouring.yml  IncrementalScheduling.yml  KnightTour.yml  KnightTourWithHoles.yml  Labyrinth.yml  MaximalCliqueProblem.yml  Nomystery.yml  PartnerUnits.yml  PermutationPatternMatching.yml  RicochetRobots.yml  Sokoban.yml  StableMarriage.yml  ValvesLocationProblem.yml  VisitAll.yml
specifications/behaviors/: behavior_first_report_v1.yml  behavior_first_report_v2.yml  behavior_first_report_v3.yml  behavior_first_report_v4.yml  behavior_second_report_v1.yml  behavior_second_report_v2.yml  behavior_second_report_v3.yml  behavior_second_report_v4.yml  behavior_second_report_v5.yml  behavior_second_report_v6.yml
